[gd_scene load_steps=3 format=2]

[ext_resource path="res://material_maker/widgets/node_editor/parameter_size.gd" type="Script" id=1]
[ext_resource path="res://material_maker/widgets/size_option_button.gd" type="Script" id=2]


[node name="size" type="HBoxContainer"]
margin_right = 148.0
margin_bottom = 24.0
script = ExtResource( 1 )

[node name="LabelFirst" type="Label" parent="."]
margin_top = 5.0
margin_right = 28.0
margin_bottom = 19.0
text = "Min:"

[node name="First" type="OptionButton" parent="."]
margin_left = 32.0
margin_right = 96.0
margin_bottom = 24.0
text = "1x1"
items = [ "1x1", null, false, -1, null, "2x2", null, false, -1, null, "4x4", null, false, -1, null, "8x8", null, false, -1, null, "16x16", null, false, -1, null, "32x32", null, false, -1, null, "64x64", null, false, -1, null, "128x128", null, false, -1, null, "256x256", null, false, -1, null, "512x512", null, false, -1, null, "1024x1024", null, false, -1, null, "2048x2048", null, false, -1, null, "4096x4096", null, false, -1, null ]
selected = 0
script = ExtResource( 2 )

[node name="LabelLast" type="Label" parent="."]
margin_left = 100.0
margin_top = 5.0
margin_right = 130.0
margin_bottom = 19.0
text = "Max:"

[node name="Last" type="OptionButton" parent="."]
margin_left = 134.0
margin_right = 246.0
margin_bottom = 24.0
text = "4096x4096"
items = [ "1x1", null, false, -1, null, "2x2", null, false, -1, null, "4x4", null, false, -1, null, "8x8", null, false, -1, null, "16x16", null, false, -1, null, "32x32", null, false, -1, null, "64x64", null, false, -1, null, "128x128", null, false, -1, null, "256x256", null, false, -1, null, "512x512", null, false, -1, null, "1024x1024", null, false, -1, null, "2048x2048", null, false, -1, null, "4096x4096", null, false, -1, null ]
selected = 12
script = ExtResource( 2 )

[node name="LabelDefault" type="Label" parent="."]
margin_left = 250.0
margin_top = 5.0
margin_right = 300.0
margin_bottom = 19.0
text = "Default:"

[node name="Default" type="OptionButton" parent="."]
margin_left = 304.0
margin_right = 416.0
margin_bottom = 24.0
text = "1024x1024"
items = [ "1x1", null, false, -1, null, "2x2", null, false, -1, null, "4x4", null, false, -1, null, "8x8", null, false, -1, null, "16x16", null, false, -1, null, "32x32", null, false, -1, null, "64x64", null, false, -1, null, "128x128", null, false, -1, null, "256x256", null, false, -1, null, "512x512", null, false, -1, null, "1024x1024", null, false, -1, null, "2048x2048", null, false, -1, null, "4096x4096", null, false, -1, null ]
selected = 10
script = ExtResource( 2 )
[connection signal="size_value_changed" from="First" to="." method="_on_First_item_selected"]
[connection signal="size_value_changed" from="Last" to="." method="_on_Last_item_selected"]
[connection signal="size_value_changed" from="Default" to="." method="_on_Default_item_selected"]
